# Speedy

./: .gitignore  README.md
Python/: OOP.ipynb  README.md  algorithm_data_struct.ipynb  asyncio_example.py  basic_python.ipynb  bfs_dfs.ipynb  bit_manipulation.ipynb  collections.ipynb  data_struct_dated.ipynb  data_structure.ipynb  factory_boy & faker.ipynb  factory_boy_and_faker.ipynb  functools.ipynb  itertools.ipynb  linked_list.ipynb  multi-threading  multi-threading.ipynb  multiprocessing  multiprocessing.ipynb  networkx_shortest_path.ipynb  pyproject.toml  pytest_examples.ipynb  random.ipynb  requests.ipynb  requirements.txt  sort.ipynb
Python/artefacts/: objects.py
Python/asyncio/: 00_basic_asyncio.ipynb  00_basic_pattern.py  01_count_async.py  02_random.py  03_chaind_coroutine.py  04_async_queue.py  05_sync_async.py  06_sync_async_v2.py  06_sync_async_v2_en.py  07_semaphore.py  README.md
Python/filelock_example/: filelock.ipynb  tmp.txt
Python/hydra_config/structured_config_schama_validation/: config.py
Python/hydra_config/structured_config_schama_validation/conf/: config.yaml
Python/hydra_config/strucutred_config_with_env_variables/: main.py  structured_config.py
Python/locust_playground/: README.md  locustfile.py  pyproject.toml
Python/multi_threading/: multi-threading.ipynb  prefetching.ipynb
Python/pydantic/: README.md  configs.py  configs.toml  configs.yaml  configs_v2.toml  main.py  playground.ipynb
Python/pydantic/discreminated_union/: example.ipynb
Python/pydantic/dynamic_model_registry/: README.md  __init__.py  _all.py  config.py  main.py  registry.py  types.py
Python/pytest_playground/: pytest_examples.ipynb  unit_test_double.ipynb
Sklearn/: Tree Based Models  (+1 more)
streamlit/chatbot/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
streamlit/chatbot/app/: main.py
streamlit/chatbot/db/: models.py
streamlit/chatbot/models/: anthropic_provider.py  base.py  config.py  models.toml  openai_provider.py
(+34 files in other folders)
