[project]
name = "python"
version = "0.1.0"
description = "Python Playground"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.1.31",
    "dotenv>=0.9.9",
    "factory-boy>=3.3.3",
    "filelock>=3.18.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[tool.uv.workspace]
members = ["locust"]
